objects/ASI_CRM_Contract_Pros_Benchmark__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Image_Level_Name__c</fullName>
        <formula>TEXT( ASI_CRM_SG_Image__r.ASI_CRM_SG_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Level Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Type_Name__c</fullName>
        <formula>ASI_CRM_SG_Outlet_Type__r.ASI_CRM_SG_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image</label>
        <referenceTo>ASI_CRM_Image_Level__c</referenceTo>
        <relationshipName>Benchmarks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Matrix__c</fullName>
        <label>Matrix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Type</label>
        <referenceTo>ASI_CRM_Outlet_Type__c</referenceTo>
        <relationshipName>Benchmarks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_PRS_Benchmark__c</fullName>
        <label>PRS Benchmark</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Pros_Type__c</fullName>
        <label>Pros Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Nightclub</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Traditional On-Trade (TOT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Pros Benchmark</label>
    <listViews>
        <fullName>SG</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Pros_Type__c</columns>
        <columns>ASI_CRM_Outlet_Type_Name__c</columns>
        <columns>ASI_CRM_Image_Level_Name__c</columns>
        <columns>ASI_CRM_SG_Matrix__c</columns>
        <columns>ASI_CRM_SG_PRS_Benchmark__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Contract_Pros_Benchmark__c.ASI_CRM_SG_Benchmark</value>
        </filters>
        <label>SG</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CPB-{00000}</displayFormat>
        <label>Benchmark No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Pros Benchmarks</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Benchmark</fullName>
        <active>true</active>
        <label>ASI CRM SG Benchmark</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>